--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 </head>
 <body>
   <video autoplay muted playsinline loop preload="auto">
-    <source src="future-labs-V2.mp4" type="video/mp4">
+    <source src="future-labs-v2.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </body>
 </html>
+
